<resources>
    <string name="app_name">My Business Card!</string>
    <string name="txtTitle">Ariana M. Davis, Undergrad</string>
    <string name="description">Profile Image</string>
    <string name="btnDetails">Details</string>
    <string name="txtContact">Contact</string>
    <string name="txtItem1">Florida State University</string>
    <string name="txtItem2">iSchool</string>
    <string name="txtItem3">amd14b@my.fsu.edu</string>
    <string name="txtItem4">(407)371-7717</string>
    <string name="txtInterests">Interests</string>
    <string name="txtInfo">Mobile Applications Development, Programming, Web Applications, Database Design, .NET, PHP, MySQL, Web Programming</string>
</resources>
